test/bad/sec_call_trusted.subst
{"functions":[{"paramSecrecy":[true],"returnSecrecy":[false],"trusted":true},{"paramSecrecy":[true],"returnSecrecy":[false],"trusted":true}],"globalsOffset":64,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":28} 
{"functions":[{"paramSecrecy":[true],"returnSecrecy":[false],"trusted":false},{"paramSecrecy":[true],"returnSecrecy":[false],"trusted":true}],"globalsOffset":64,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":28}